--- a/cards.yml
+++ b/cards.yml
@@ -1,7 +1,7 @@
 build:
   version: 3.0
 
-accounts:
+cards:
   message: "Welcome to XYZ Bank Cards Service."
   contact_details:
     name: "Prashant Agrawal"
