--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: 1.0
 
-cards:
+loans:
   message: "Welcome to XYZ Bank Loans Prod Service."
   contact_details:
     name: "Prashant Agrawal"
