--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -1,7 +1,7 @@
 build:
   version: 2.0
 
-accounts:
+loans:
   message: "Welcome to XYZ Bank Loans QA Service."
   contact_details:
     name: "Prashant Agrawal"
