--- a/loans.yml
+++ b/loans.yml
@@ -1,7 +1,7 @@
 build:
   version: 3.0
 
-accounts:
+loans:
   message: "Welcome to XYZ Bank Loans Service."
   contact_details:
     name: "Prashant Agrawal"
