--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: 1.0
 
 cards:
-  message: "Welcome to XYZ Bank Card Prod Service."
+  message: "Welcome to XYZ Bank Card production Service."
   contact_details:
     name: "Prashant Agrawal"
     email: "agrawaprashant@gmail.com"
